<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionsFragment">

    <!--ConstraintLayout let us position and size views in a flexible way  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/instructions_text_one"
            style="@style/mainTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/instructions_text_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructions_text_two"
            style="@style/mainTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/instructions_text_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_text_one" />

        <Button
            android:id="@+id/go_to_shoe_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_shoe_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_text_two"
            app:layout_constraintVertical_bias="0.074" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>